--- a/css/main.css
+++ b/css/main.css
@@ -1984,7 +1984,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .generic-banner {
-  background-image: url(/img/bkg1.jpg);
+  background-image: url(../img/bkg1.jpg);
   background-position: center;
 }
 
