colour-7 hex num changes

--- a/css/main.css
+++ b/css/main.css
@@ -1160,7 +1160,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .progress-table .table-row .percentage .progress .progress-bar.color-7 {
-  background-color: #a367e7;
+  background-color: #b01afe;
 }
 
 .progress-table .table-row .percentage .progress .progress-bar.color-8 {
